# M1-S2-Computer-Graphics-Project

./: CMakeLists.txt  README.md  main.c  scene1.c  scene2.c  utils.c  utils.h
include/scenes/: tables.h
include/shapes/: cube.h  sphere.h
scenes/: pillarsway.c  pillarsway.h  tables.c
shapes/: cone.c  cone.h  cube.c  cylinder.c  cylinder.h  shapes.c  shapes.h  sphere.c  torus.c  torus.h
src/: scene1.c  scene2.c  utils.c
src/scenes/: pillarsway.c  tables.c
src/shapes/: cone.c  cube.c  cylinder.c  shapes.c  sphere.c  torus.c
src/trees/: node.c  tree.c
trees/: node.c  node.h  tree.c  tree.h
